--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1"
   }
 }
